extending update frontend in api-tool